crates/wac-parser/tests/resolution/fail/mismatched-variant-case-count.wac
import x: interface {
    variant v {
        a,
        b(u16),
        c(tuple<string, u16>),
        d,
    }
};

let i = new foo:bar { x };
